Separate VisualViewport layer tree creation from attachment.

This paves the way for deferring attachment.  With root layer scrolling the
layer passed to WebViewImpl::setRootGraphicsLayer will be the LayoutView's main
GraphicsLayer, which does not exist until after the compositing update.

BUG=698464
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2735543002
Cr-Commit-Position: refs/heads/master@{#454934}

Former-commit-id: 16beff659fc7bc169da48a13d926e05b01053bea