third_party/WebKit/Source/core/loader/EmptyClients.cpp
@@ -116,7 +116,7 @@ void EmptyChromeClient::attachRootGraphicsLayer(GraphicsLayer* layer,
   Page* page = localRoot ? localRoot->page() : nullptr;
   if (!page)
     return;
-  page->frameHost().visualViewport().attachToLayerTree(layer);
+  page->frameHost().visualViewport().attachLayerTree(layer);
 }
 
 String EmptyChromeClient::acceptLanguages() {
